2007-08-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Let the user override the default CXXFLAGS_DEBUG

	The CXXFLAGS_DEBUG environment variable can be used to override
	the default settings of this flag. BTW, added "-Werror" to the
	default debug flags.

2007-08-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.cpp, itpp/base/random.h, tests/rand_test.cpp,
	tests/rand_test.ref, tests/source_test.cpp, tests/source_test.ref:
	Simplified and optimised RNG implementations

	Rayleigh_RNG and Rice_RNG now use Normal_RNG for efficient
	generation of samples (new implementation is about 4 times
	faster). Minor code optimisations in Laplace_RNG, Weibull_RNG and
	AR1_Normal_RNG. Test programs for RNG and deterministic sources
	updated accordingly.

2007-08-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.am: Added NEWS-3.99 to EXTRA_DIST

	* tests/stat_test.cpp: Check for LAPACK

	This test requires svd() function, which is provided by an
	external LAPACK library. Therefore we have to check for
	HAVE_LAPACK definition like in other LAPACK-related test programs.

	* configure.ac: Version bump

	* NEWS, NEWS-3.99: Renamed NEWS file to NEWS-3.99

	* NEWS-3.10: Updated to include 3.10.12 release notes

==============================================================================

2007-08-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.99.3.1 released (SVN tag: release-3-99-3-1)

	* NEWS: Updated to reflect recent changes

	* configure.ac: Version bump

	* configure.ac, itpp/base/Makefile.am, itpp/base/blas.h,
	itpp/base/sources.mk, itpp/base/vec.h, itpp/base/zdotusub.f: Fixed
	a bug related to zdotu_() BLAS function

	Wrong declaration of zdotu_() BLAS function interface caused
	segmentation faults when IT++ was compiled with
	"-fomit-frame-pointer" flag. To fix this problem a Fortran wrapper
	function zdotusub_() has been added to IT++. This wrapper function
	comes from NetLib's CBLAS package.
